// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queues Basic API create sends request 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "x": 1,
      },
      "method": "POST",
      "url": "/queues",
    },
    undefined,
  ],
]
`;

exports[`queues Basic API delete sends request 1`] = `
Array [
  Array [
    Object {
      "method": "DELETE",
      "query": undefined,
      "url": "/queues/queueId",
    },
    undefined,
  ],
]
`;

exports[`queues Basic API get sends request 1`] = `
Array [
  Array [
    Object {
      "method": "GET",
      "url": "/queues/queueId",
    },
    undefined,
  ],
]
`;

exports[`queues Basic API list sends request 1`] = `
Array [
  Array [
    Object {
      "method": "GET",
      "query": Object {
        "x": 1,
      },
      "url": "/queues",
    },
    undefined,
  ],
]
`;

exports[`queues Basic API push delegates to tasks API 1`] = `
Array [
  Array [
    Object {
      "name": "New Job!",
      "queue": "queueId",
    },
    undefined,
  ],
]
`;

exports[`queues Basic API removeWorker sends request 1`] = `
Array [
  Array [
    Object {
      "method": "UNSUBSCRIBE",
      "url": "/queues/queueId/worker",
    },
  ],
]
`;

exports[`queues Basic API update sends request 1`] = `
Array [
  Array [
    Object {
      "body": Object {
        "x": 1,
      },
      "method": "PUT",
      "url": "/queues/queueId",
    },
    undefined,
  ],
]
`;

exports[`queues Basic API worker sends request 1`] = `
Array [
  Array [
    Object {
      "method": "SUBSCRIBE",
      "url": "/queues/queueId/worker",
    },
    null,
  ],
]
`;

exports[`queues Worker API process work should error if not a worker 1`] = `"Queue is not a worker queue"`;

exports[`queues Worker API throws if queue is already a worker 1`] = `"Queue is already a worker"`;
